# tello-drone-gate-detector

./: README.md
drone_racing_ros2/tello_ros/tello_gazebo/launch/: demo_track_launch.py  gate_detect_launch.py
drone_racing_ros2/tello_ros/tello_gazebo/worlds/: four_green_gates.world
gate_detector/: package.xml  setup.cfg  setup.py
gate_detector/gate_detector/: hsv_tuner.py  image_listener.py  real_image_listener.py
gate_detector/gate_detector/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
gate_detector/gate_detector/log/: latest_build
